--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-.hat, .basement__container, .portfolio-container {
+.hat, .features, .basement__container, .portfolio-container {
   margin-left: auto;
   margin-right: auto;
   padding-left: 15px;
