--- a/css/main.css
+++ b/css/main.css
@@ -76,7 +76,6 @@ body {
   color: #2196f3;
 }
 
-/* Menu nav */
 .menu-nav {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -133,7 +132,6 @@ body {
   margin-left: 50px;
 }
 
-/* Contacts */
 .contacts {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -250,7 +248,6 @@ body {
           box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 }
 
-/* features */
 .features {
   padding-top: 94px;
   padding-bottom: 94px;
@@ -372,7 +369,6 @@ body {
   background-color: rgba(47, 48, 58, 0.8);
 }
 
-/* team */
 .team-info {
   padding-bottom: 94px;
   padding-top: 94px;
@@ -588,6 +584,7 @@ body {
 
 .info__address {
   display: block;
+  font-style: normal;
   color: #ffffff;
   font-weight: 400;
   font-size: 14px;
@@ -827,7 +824,6 @@ body {
   letter-spacing: 0.03em;
 }
 
-/* Models */
 .models {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -924,7 +920,6 @@ body {
   letter-spacing: 0.03em;
 }
 
-/* modal window*/
 .backdrop {
   position: fixed;
   top: 0;
@@ -961,8 +956,6 @@ body {
   background-color: #ffffff;
 }
 
-/* form */
-/* application */
 .application {
   position: relative;
   padding: 40px;
@@ -1025,7 +1018,6 @@ body {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-/* textarea */
 .textarea {
   position: relative;
 }
@@ -1061,7 +1053,6 @@ body {
   font-style: normal;
 }
 
-/* agreement */
 .agreement {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1109,7 +1100,6 @@ body {
   margin-right: 7px;
 }
 
-/* send button */
 .send-box {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1144,7 +1134,6 @@ body {
   cursor: pointer;
 }
 
-/* close button */
 .close-button {
   display: -webkit-box;
   display: -ms-flexbox;
