--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,7 +1,20 @@
 @import './utils/variables';
-@import './components/body';
-@import './components/header';
+@import './utils/mixin';
+@import './base/body';
+@import './/base/header';
+@import './components/menu-nav';
+@import './components/contacts';
 @import './components/hero';
-@import './components/footer';
+@import './components/features';
+@import './components/work';
+@import './components/team';
+@import './components/clients';
+@import './base/footer';
 @import './components/portfolio';
-@import './components/modal';
+@import './components/models';
+@import './base/modal';
+@import './components/application';
+@import './components/text-area';
+@import './components/agreement';
+@import './components/send-button';
+@import './components/close-button';
